# project_1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  text1.txt  text2.txt  work_cmake
.github/workflows/: CAN_messages_pipeline.yaml  File_IO_pipeline.yaml  whole_project.yaml
File_IO/: CMakeLists.txt  Vivian.txt  main.cpp  project.cpp  project.h  test.cpp
File_IO/app/src/: main.cpp
File_IO/lib/: ut.cpp
File_IO/lib/include/: project.h  todo.md
File_IO/lib/src/: project.cpp  todo.md
File_IO/lib/ut/: tests.cpp  ut_lib_tests.cpp
can_messages/: CMakeLists.txt  Can_messages.py  min_signals.h  min_signals.json  my_file.txt
can_messages/output/include/can_messages/: min_signals.h
can_messages/output/src/: min_signals.cpp
main_component/: CMakeLists.txt
main_component/input/: main_comp.txt
main_component/src/: main.cpp
main_component/tests/: inputs.txt  output.txt  readme.md  test_mc.py
